corrected squished banner image

--- a/HCCH_HTML_Project/public_html/style.css
+++ b/HCCH_HTML_Project/public_html/style.css
@@ -68,7 +68,7 @@ and open the template in the editor.
 }
 
 #bannerImg {
-    height: 400px;
+    height: 768px;
     width: 960px;
 }
 .mainContent {
